--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "botbuilder": "^3.13.1",
     "botbuilder-azure": "^3.0.4",
+    "nodemailer": "^4.4.2",
     "restify": "^5.0.0"
   },
   "devDependencies": {
