--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "botbuilder": "^3.13.1",
     "botbuilder-azure": "^3.0.4",
     "nodemailer": "^4.4.2",
-    "restify": "^5.0.0"
+    "restify": "^5.0.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "request": "^2.83.0",
